--- a/.buildkite/pipelines/geodata2-pr-builder/start.yml
+++ b/.buildkite/pipelines/geodata2-pr-builder/start.yml
@@ -1,6 +1,10 @@
 - label: 'Test Build'
   command:
     - if [ ! -z "$MERGE_BRANCH" ]; then git merge $MERGE_BRANCH -m "merging $MERGE_BRANCH"; fi
-    - make test
+    - curl https://rebar3.s3.amazonaws.com/rebar3 -o ./rebar3
+    - chmod +x rebar3
+    - aws s3 sync s3://adroll-misc/rtb/geodata2/ . --exclude "*" --include "*plt" --no-follow-symlinks
+    - ./rebar3 test
+    - aws s3 sync . s3://adroll-misc/rtb/geodata2/ --exclude "*" --include "*plt" --no-follow-symlinks
   agents:
     queue: 'rtb'
