Pin rebar3_format to its latest release

--- a/rebar.config
+++ b/rebar.config
@@ -44,4 +44,4 @@
     {files, ["src/*.erl", "test/*.erl", "include/*.hrl"]}
 ]}.
 
-{plugins, [rebar3_lint, rebar3_format]}.
+{plugins, [rebar3_lint, {rebar3_format, "~> 0.5.0"}]}.
