[RTI-8858] Kill dead code with fire 🔥

--- a/rebar.config
+++ b/rebar.config
@@ -38,10 +38,14 @@
     deprecated_functions
 ]}.
 
-{alias, [{test, [format, lint, xref, dialyzer, eunit, cover]}]}.
+{alias, [{test, [format, lint, hank, xref, dialyzer, eunit, cover]}]}.
 
 {format, [
     {files, ["src/*.erl", "test/*.erl", "include/*.hrl"]}
 ]}.
 
-{plugins, [rebar3_lint, {rebar3_format, "~> 0.8.1"}]}.
+{project_plugins, [
+    {rebar3_format, "~> 0.8.2"},
+    {rebar3_lint,   "~> 0.3.0"},
+    {rebar3_hank,   "~> 0.2.1"}
+]}.
