[RTI-8858] Remove dead code, unneeded macros and more

--- a/rebar.config
+++ b/rebar.config
@@ -44,6 +44,10 @@
     {files, ["src/*.erl", "test/*.erl", "include/*.hrl"]}
 ]}.
 
+{hank, [{ignore, [
+    {"test/*.erl", unused_ignored_function_params}
+]}]}.
+
 {project_plugins, [
     {rebar3_format, "~> 0.8.2"},
     {rebar3_lint,   "~> 0.3.0"},
