[rebar3_format-0.10.0] Upgrade formatter to 0.10.1

--- a/elvis.config
+++ b/elvis.config
@@ -1,31 +1,18 @@
-[
- {
-   elvis,
-   [
-    {config,
-     [#{dirs => ["src"],
-        filter => "*.erl",
-        ruleset => erl_files,
-        rules => [
-            {elvis_style, dont_repeat_yourself, #{min_complexity => 40}},
-            {elvis_style, invalid_dynamic_call, #{ignore => [geodata2]}}
-        ]
-      },
-      #{dirs => ["test"],
-        filter => "*.erl",
-        ruleset => erl_files,
-        rules => [
-            {elvis_style, dont_repeat_yourself, #{min_complexity => 40}},
+[{elvis,
+  [{config,
+    [#{dirs => ["src"],
+       filter => "*.erl",
+       ruleset => erl_files,
+       rules =>
+           [{elvis_style, dont_repeat_yourself, #{min_complexity => 40}},
+            {elvis_style, invalid_dynamic_call, #{ignore => [geodata2]}}]},
+     #{dirs => ["test"],
+       filter => "*.erl",
+       ruleset => erl_files,
+       rules =>
+           [{elvis_style, dont_repeat_yourself, #{min_complexity => 40}},
             %% Variables in eunit macros are called, for instance, __V
-            {elvis_style, variable_naming_convention, #{regex => "^_?_?([A-Z][0-9a-zA-Z]*)_?$"}}
-        ]
-      },
-      #{dirs => ["."],
-        filter => "elvis.config",
-        ruleset => elvis_config
-      }
-     ]
-    }
-   ]
- }
-].
+            {elvis_style, variable_naming_convention, #{regex => "^_?_?([A-Z][0-9a-zA-Z]*)_?$"}}]},
+     #{dirs => ["."],
+       filter => "elvis.config",
+       ruleset => elvis_config}]}]}].
