--- a/rebar.config
+++ b/rebar.config
@@ -1,55 +1,46 @@
 % -*- mode: erlang -*-
 {clean_files, ["ebin/*.beam", "ebin/egeoip.app", "doc/", "_test"]}.
-{erl_opts, [
-    warn_unused_vars,
-    warn_export_all,
-    warn_shadow_vars,
-    warn_unused_import,
-    warn_unused_function,
-    warn_bif_clash,
-    warn_unused_record,
-    warn_deprecated_function,
-    warn_obsolete_guard,
-    strict_validation,
-    warn_export_vars,
-    warn_exported_vars,
-    warnings_as_errors
-]}.
+
+{erl_opts,
+ [warn_unused_vars,
+  warn_export_all,
+  warn_shadow_vars,
+  warn_unused_import,
+  warn_unused_function,
+  warn_bif_clash,
+  warn_unused_record,
+  warn_deprecated_function,
+  warn_obsolete_guard,
+  strict_validation,
+  warn_export_vars,
+  warn_exported_vars,
+  warnings_as_errors]}.
 
 {cover_enabled, true}.
+
 {cover_opts, [verbose]}.
+
 {cover_print_enabled, true}.
 
-{eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
+{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
 
-{dialyzer, [
-    {warnings, [unknown, no_return, error_handling]},
-    {plt_apps, top_level_deps},
-    {plt_extra_apps, []},
-    {plt_location, local},
-    {base_plt_apps, [erts, stdlib, kernel]},
-    {base_plt_location, global}
-]}.
+{dialyzer,
+ [{warnings, [unknown, no_return, error_handling]},
+  {plt_apps, top_level_deps},
+  {plt_extra_apps, []},
+  {plt_location, local},
+  {base_plt_apps, [erts, stdlib, kernel]},
+  {base_plt_location, global}]}.
 
-{xref_checks,[
-    undefined_function_calls,
-    locals_not_used,
-    deprecated_function_calls,
-    deprecated_functions
-]}.
+{xref_checks,
+ [undefined_function_calls,
+  locals_not_used,
+  deprecated_function_calls,
+  deprecated_functions]}.
 
 {alias, [{test, [format, lint, hank, xref, dialyzer, eunit, cover]}]}.
 
-{format, [
-    {files, ["src/*.erl", "test/*.erl", "include/*.hrl"]}
-]}.
+{hank, [{ignore, [{"test/*.erl", unused_ignored_function_params}]}]}.
 
-{hank, [{ignore, [
-    {"test/*.erl", unused_ignored_function_params}
-]}]}.
-
-{project_plugins, [
-    {rebar3_format, "~> 0.9.0"},
-    {rebar3_lint,   "~> 0.3.2"},
-    {rebar3_hank,   "~> 0.2.1"}
-]}.
+{project_plugins,
+ [{rebar3_format, "~> 0.10.0"}, {rebar3_lint, "~> 0.3.2"}, {rebar3_hank, "~> 0.2.1"}]}.
