--- a/rebar.config
+++ b/rebar.config
@@ -13,8 +13,7 @@
   warn_obsolete_guard,
   strict_validation,
   warn_export_vars,
-  warn_exported_vars,
-  warnings_as_errors]}.
+  warn_exported_vars]}.
 
 {cover_enabled, true}.
 
