[RTI-9553] Adjust for OTP23 (#17)
* [RTI-9553] Adjust for OTP23

* [RTI-9553] Temporarily remove warnings_as_errors

--- a/rebar.config
+++ b/rebar.config
@@ -13,8 +13,7 @@
   warn_obsolete_guard,
   strict_validation,
   warn_export_vars,
-  warn_exported_vars,
-  warnings_as_errors]}.
+  warn_exported_vars]}.
 
 {cover_enabled, true}.
 
@@ -41,4 +40,4 @@
 {alias, [{test, [format, lint, hank, xref, dialyzer, eunit, cover]}]}.
 
 {project_plugins,
- [{rebar3_format, "~> 1.0.0"}, {rebar3_lint, "~> 0.4.0"}, {rebar3_hank, "~> 0.4.0"}]}.
+ [{rebar3_format, "~> 1.0.0"}, {rebar3_lint, "~> 0.4.0"}, {rebar3_hank, "~> 1.1.1"}]}.
