--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,9 @@
   warn_obsolete_guard,
   strict_validation,
   warn_export_vars,
-  warn_exported_vars]}.
+  warn_exported_vars,
+  warnings_as_errors,
+  debug_info]}.
 
 {cover_enabled, true}.
 
