--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,7 @@
 {clean_files, ["ebin/*.beam", "ebin/egeoip.app", "doc/", "_test"]}.
 
 {erl_opts,
- [warn_unused_vars,
-  warn_export_all,
-  warn_shadow_vars,
-  warn_unused_import,
-  warn_unused_function,
-  warn_bif_clash,
-  warn_unused_record,
-  warn_deprecated_function,
-  warn_obsolete_guard,
-  strict_validation,
-  warn_export_vars,
-  warn_exported_vars,
-  warnings_as_errors,
-  debug_info]}.
+ [warn_unused_import, warn_export_vars, warnings_as_errors, verbose, report, debug_info]}.
 
 {cover_enabled, true}.
 
