[RTI-13896] Add more dialyzer checks

--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
 
 {dialyzer,
- [{warnings, [unknown, no_return, error_handling]},
+ [{warnings, [unknown, no_return, error_handling, missing_return, extra_return]},
   {plt_apps, top_level_deps},
   {plt_extra_apps, []},
   {plt_location, local},
